--- a/.htaccess
+++ b/.htaccess
@@ -16,6 +16,7 @@
 # Proper MIME type for all files
 # ----------------------------------------------------------------------
 
+
   # JavaScript
   #   Normalize to standard type (it's sniffed in IE anyways)
   #   tools.ietf.org/html/rfc4329#section-7.2
@@ -58,9 +59,7 @@
 # ----------------------------------------------------------------------
 # Gzip compression
 # ----------------------------------------------------------------------
-
 <IfModule mod_deflate.c>
-
   # Force deflate for mangled headers developer.yahoo.com/blogs/ydn/posts/2010/12/pushing-beyond-gzipping/
   <IfModule mod_setenvif.c>
     <IfModule mod_headers.c>
@@ -111,7 +110,10 @@
 # FollowSymLinks must be enabled for this to work.
 
 <IfModule mod_rewrite.c>
+
+
   Options +FollowSymlinks -Indexes
+
   RewriteEngine On
   
   # If you installed Bonfire in a subfolder, you will need to 
@@ -123,8 +125,13 @@
   #Additionally this will allow you to create a System.php controller,
   #previously this would not have been possible.
   #'system' can be replaced if you have renamed your system folder.
+
   RewriteCond %{REQUEST_URI} ^bonfire/codeigniter.*
-  RewriteRule ^(.*)$ /index.php?/$1 [L]
+  # RewriteCond $1 !^(index\.php|images|robots\.txt)
+  RewriteRule ^(.*)$ /index.php/$1 [L]
+
+  # RewriteCond %{REQUEST_URI} ^bonfire/codeigniter.*
+  # RewriteRule ^(.*)$ /index.php?/$1 [L]
 </IfModule>
 
 # Rewrite "www.example.com -> example.com"
